--- a/config/database.yml
+++ b/config/database.yml
@@ -14,19 +14,19 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: root
   host: localhost
 
 development:
   <<: *default
-  database: bulletinboard_development
+  database: bulletin_board
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bulletinboard_test
+  database: bulletin_board
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: bulletinboard_production
-  username: bulletinboard
+  database: bulletin_board
+  username: bulletin_board
   password: <%= ENV['BULLETINBOARD_DATABASE_PASSWORD'] %>
